fixing badges with flex-wrap

--- a/lvlup/src/components/BadgeWindow/BadgeWindow.css
+++ b/lvlup/src/components/BadgeWindow/BadgeWindow.css
@@ -8,15 +8,18 @@
 .badgeAttrHead {
     color: ghostwhite;
     text-align: center;
-    margin-bottom: 10px;
-    margin-top: 15px;
+    margin-bottom: 22px;
+    margin-top: 5px;
 }
 
 .attrBadgesContainer {
     display:flex;
     flex-direction: row-reverse;
     justify-content: center;
-    height: 70px;
+    flex-wrap: wrap;
+    height: auto;
+    width: 400px;
+    margin-bottom: 0px;
 }
 
 .badgeImg {
@@ -55,5 +58,5 @@
     width: 60px;
     align-items: center;
     margin-left: 2px;
-    margin-right: 2px;
+    margin-right: 15px;
   }
